force-app/main/default/objects/Case/fields/Tech_owner_is_current_user__c.field-meta.xml
<CustomField>
    <fullName>Tech_owner_is_current_user__c</fullName>
    <formula>IF(Owner:User.Id = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech owner is current user</label>
    <type>Checkbox</type>
</CustomField>