force-app/main/default/objects/Case/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <formula>Contact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone</label>
    <type>Text</type>
</CustomField>