force-app/main/default/objects/Case/fields/Touchpoints__c.field-meta.xml
<CustomField>
    <fullName>Touchpoints__c</fullName>
    <description>Anouar : Je viens d&apos;ajouter ce champ</description>
    <inlineHelpText>Anouar : Je viens d&apos;ajouter ce champ</inlineHelpText>
    <label>Touchpoints</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New car sales</fullName>
            </value>
            <value>
                <fullName>Used car sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>