force-app/main/default/objects/Case/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <formula>Stock__r.N_de_chassis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN</label>
    <type>Text</type>
</CustomField>