force-app/main/default/objects/Case/validationRules/Case_VR_001_Changement_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_VR_001_Changement_case</fullName>
    <active>false</active>
    <errorConditionFormula>Tech_is_changed__c</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas modifier une requête lie aux équipes CRM, Merci d&apos;accepter d&apos;abord la requête.</errorMessage>
</ValidationRule>