force-app/main/default/objects/Case/validationRules/Case_VR_002_Champ_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_VR_002_Champ_obligatoire</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Etat_contact__c, &quot;Contacté&quot;) &amp;&amp; OR(ISPICKVAL(Activit_concernee__c, &quot;&quot;),ISPICKVAL(Categorie__c, &quot;&quot;),ISPICKVAL(Cause_de_reclamation__c, &quot;&quot;),ISPICKVAL(showroom__c, &quot;&quot;),ISPICKVAL(Type, &quot;&quot;)) &amp;&amp;  NOT(ISCHANGED( isNotifiedN_1__c )) &amp;&amp;  NOT(ISCHANGED( isManagerNotified__c ))</errorConditionFormula>
    <errorMessage>Merci de saisir les champs de qualification.</errorMessage>
</ValidationRule>