force-app/main/default/objects/Case/listViews/Casablanca_Case.listView-meta.xml
<ListView>
    <fullName>Casablanca_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Casablanca</label>
    <queue>Casablanca</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>