force-app/main/default/objects/Case/listViews/Tickets_en_cours_de_mon_quipe.listView-meta.xml
<ListView>
    <fullName>Tickets_en_cours_de_mon_quipe</fullName>
    <columns>flag__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Tickets en cours de mon équipe</label>
</ListView>