force-app/main/default/objects/Case/listViews/Tickets_trait_s_et_clotir_s.listView-meta.xml
<ListView>
    <fullName>Tickets_trait_s_et_clotir_s</fullName>
    <columns>flag__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les tickets</label>
</ListView>